go/y.output

state 0
	$accept: .Start $end 

	PACKAGE  shift 3
	.  error

	SourceFile  goto 2
	Start  goto 1

state 1
	$accept:  Start.$end 

	$end  accept
	.  error


state 2
	Start:  SourceFile.    (130)

	.  reduce 130 (src line 791)


state 3
	SourceFile:  PACKAGE.NAME ; SourceFile1 SourceFile2 

	NAME  shift 4
	.  error


state 4
	SourceFile:  PACKAGE NAME.; SourceFile1 SourceFile2 

	;  shift 5
	.  error


state 5
	SourceFile:  PACKAGE NAME ;.SourceFile1 SourceFile2 
	SourceFile1: .    (121)

	.  reduce 121 (src line 751)

	SourceFile1  goto 6

state 6
	SourceFile:  PACKAGE NAME ; SourceFile1.SourceFile2 
	SourceFile1:  SourceFile1.IMPORT ImportSpec ; 
	SourceFile1:  SourceFile1.IMPORT ( ImportDecl11 ) ; 
	SourceFile2: .    (124)

	IMPORT  shift 8
	.  reduce 124 (src line 765)

	SourceFile2  goto 7

state 7
	SourceFile:  PACKAGE NAME ; SourceFile1 SourceFile2.    (120)
	SourceFile2:  SourceFile2.Declaration ; 
	SourceFile2:  SourceFile2.FUNC NAME Function ; 
	SourceFile2:  SourceFile2.FUNC NAME Signature ; 
	SourceFile2:  SourceFile2.FUNC Receiver NAME Function ; 
	SourceFile2:  SourceFile2.FUNC Receiver NAME Signature ; 

	CONST  shift 11
	FUNC  shift 10
	TYPE  shift 12
	VAR  shift 13
	.  reduce 120 (src line 745)

	Declaration  goto 9

state 8
	SourceFile1:  SourceFile1 IMPORT.ImportSpec ; 
	SourceFile1:  SourceFile1 IMPORT.( ImportDecl11 ) ; 

	NAME  shift 18
	STRING_LIT  shift 16
	(  shift 15
	.  shift 17
	.  error

	ImportSpec  goto 14

state 9
	SourceFile2:  SourceFile2 Declaration.; 

	;  shift 19
	.  error


state 10
	SourceFile2:  SourceFile2 FUNC.NAME Function ; 
	SourceFile2:  SourceFile2 FUNC.NAME Signature ; 
	SourceFile2:  SourceFile2 FUNC.Receiver NAME Function ; 
	SourceFile2:  SourceFile2 FUNC.Receiver NAME Signature ; 

	NAME  shift 20
	(  shift 22
	.  error

	Receiver  goto 21

state 11
	Declaration:  CONST.ConstSpec 
	Declaration:  CONST.( ConstDecl11 ) 

	IDENTIFIER_LIST  shift 25
	(  shift 24
	.  error

	ConstSpec  goto 23

state 12
	Declaration:  TYPE.TypeSpec 
	Declaration:  TYPE.( TypeDecl11 ) 

	NAME  shift 28
	(  shift 27
	.  error

	TypeSpec  goto 26

state 13
	Declaration:  VAR.VarSpec 
	Declaration:  VAR.( VarDecl11 ) 

	IDENTIFIER_LIST  shift 31
	(  shift 30
	.  error

	VarSpec  goto 29

state 14
	SourceFile1:  SourceFile1 IMPORT ImportSpec.; 

	;  shift 32
	.  error


state 15
	SourceFile1:  SourceFile1 IMPORT (.ImportDecl11 ) ; 
	ImportDecl11: .    (60)

	.  reduce 60 (src line 463)

	ImportDecl11  goto 33

state 16
	ImportSpec:  STRING_LIT.    (62)

	.  reduce 62 (src line 473)


state 17
	ImportSpec:  ..STRING_LIT 

	STRING_LIT  shift 34
	.  error


state 18
	ImportSpec:  NAME.STRING_LIT 

	STRING_LIT  shift 35
	.  error


state 19
	SourceFile2:  SourceFile2 Declaration ;.    (125)

	.  reduce 125 (src line 770)


state 20
	SourceFile2:  SourceFile2 FUNC NAME.Function ; 
	SourceFile2:  SourceFile2 FUNC NAME.Signature ; 

	(  shift 39
	.  error

	Function  goto 36
	Parameters  goto 38
	Signature  goto 37

state 21
	SourceFile2:  SourceFile2 FUNC Receiver.NAME Function ; 
	SourceFile2:  SourceFile2 FUNC Receiver.NAME Signature ; 

	NAME  shift 40
	.  error


state 22
	Receiver:  (.Receiver1 IDENTIFIER_TYPE ) 
	Receiver:  (.Receiver1 * IDENTIFIER_TYPE ) 
	Receiver1: .    (94)

	NAME  shift 42
	.  reduce 94 (src line 623)

	Receiver1  goto 41

state 23
	Declaration:  CONST ConstSpec.    (11)

	.  reduce 11 (src line 241)


state 24
	Declaration:  CONST (.ConstDecl11 ) 
	ConstDecl11: .    (6)

	.  reduce 6 (src line 217)

	ConstDecl11  goto 43

state 25
	ConstSpec:  IDENTIFIER_LIST.    (8)
	ConstSpec:  IDENTIFIER_LIST.= ExpressionList 
	ConstSpec:  IDENTIFIER_LIST.Type = ExpressionList 

	COMMCHAN  shift 55
	IDENTIFIER_TYPE  shift 57
	CHAN  shift 54
	FUNC  shift 50
	INTERFACE  shift 51
	MAP  shift 60
	STRUCT  shift 59
	[  shift 58
	=  shift 44
	(  shift 56
	*  shift 49
	.  reduce 8 (src line 227)

	ArrayType  goto 47
	MapType  goto 53
	SliceType  goto 52
	StructType  goto 48
	Type  goto 45
	TypeName  goto 46

state 26
	Declaration:  TYPE TypeSpec.    (13)

	.  reduce 13 (src line 250)


state 27
	Declaration:  TYPE (.TypeDecl11 ) 
	TypeDecl11: .    (179)

	.  reduce 179 (src line 1001)

	TypeDecl11  goto 61

state 28
	TypeSpec:  NAME.Type 

	COMMCHAN  shift 55
	IDENTIFIER_TYPE  shift 57
	CHAN  shift 54
	FUNC  shift 50
	INTERFACE  shift 51
	MAP  shift 60
	STRUCT  shift 59
	[  shift 58
	(  shift 56
	*  shift 49
	.  error

	ArrayType  goto 47
	MapType  goto 53
	SliceType  goto 52
	StructType  goto 48
	Type  goto 62
	TypeName  goto 46

state 29
	Declaration:  VAR VarSpec.    (15)

	.  reduce 15 (src line 258)


state 30
	Declaration:  VAR (.VarDecl11 ) 
	VarDecl11: .    (269)

	.  reduce 269 (src line 1377)

	VarDecl11  goto 63

state 31
	VarSpec:  IDENTIFIER_LIST.Type 
	VarSpec:  IDENTIFIER_LIST.Type = ExpressionList 
	VarSpec:  IDENTIFIER_LIST.= ExpressionList 

	COMMCHAN  shift 55
	IDENTIFIER_TYPE  shift 57
	CHAN  shift 54
	FUNC  shift 50
	INTERFACE  shift 51
	MAP  shift 60
	STRUCT  shift 59
	[  shift 58
	=  shift 65
	(  shift 56
	*  shift 49
	.  error

	ArrayType  goto 47
	MapType  goto 53
	SliceType  goto 52
	StructType  goto 48
	Type  goto 64
	TypeName  goto 46

state 32
	SourceFile1:  SourceFile1 IMPORT ImportSpec ;.    (122)

	.  reduce 122 (src line 756)


state 33
	ImportDecl11:  ImportDecl11.ImportSpec ; 
	SourceFile1:  SourceFile1 IMPORT ( ImportDecl11.) ; 

	NAME  shift 18
	STRING_LIT  shift 16
	)  shift 67
	.  shift 17
	.  error

	ImportSpec  goto 66

state 34
	ImportSpec:  . STRING_LIT.    (63)

	.  reduce 63 (src line 478)


state 35
	ImportSpec:  NAME STRING_LIT.    (64)

	.  reduce 64 (src line 482)


state 36
	SourceFile2:  SourceFile2 FUNC NAME Function.; 

	;  shift 68
	.  error


state 37
	Function:  Signature.Block 
	SourceFile2:  SourceFile2 FUNC NAME Signature.; 

	{  shift 71
	;  shift 70
	.  error

	Block  goto 69

38: shift/reduce conflict (shift 74(0), red'n 107(0)) on (
state 38
	Signature:  Parameters.    (107)
	Signature:  Parameters.Parameters 
	Signature:  Parameters.Type 

	COMMCHAN  shift 55
	IDENTIFIER_TYPE  shift 57
	CHAN  shift 54
	FUNC  shift 50
	INTERFACE  shift 51
	MAP  shift 60
	STRUCT  shift 59
	[  shift 58
	(  shift 74
	*  shift 49
	.  reduce 107 (src line 685)

	ArrayType  goto 47
	MapType  goto 53
	Parameters  goto 72
	SliceType  goto 52
	StructType  goto 48
	Type  goto 73
	TypeName  goto 46

state 39
	Parameters:  (.) 
	Parameters:  (.ParameterDecl ParameterList1 ) 
	Parameters:  (.ParameterDecl ParameterList1 , ) 

	COMMCHAN  shift 55
	DDD  shift 78
	IDENTIFIER_LIST  shift 79
	IDENTIFIER_TYPE  shift 57
	CHAN  shift 54
	FUNC  shift 50
	INTERFACE  shift 51
	MAP  shift 60
	STRUCT  shift 59
	[  shift 58
	(  shift 56
	)  shift 75
	*  shift 49
	.  error

	ArrayType  goto 47
	MapType  goto 53
	ParameterDecl  goto 76
	SliceType  goto 52
	StructType  goto 48
	Type  goto 77
	TypeName  goto 46

state 40
	SourceFile2:  SourceFile2 FUNC Receiver NAME.Function ; 
	SourceFile2:  SourceFile2 FUNC Receiver NAME.Signature ; 

	(  shift 39
	.  error

	Function  goto 80
	Parameters  goto 38
	Signature  goto 81

state 41
	Receiver:  ( Receiver1.IDENTIFIER_TYPE ) 
	Receiver:  ( Receiver1.* IDENTIFIER_TYPE ) 

	IDENTIFIER_TYPE  shift 82
	*  shift 83
	.  error


state 42
	Receiver1:  NAME.    (95)

	.  reduce 95 (src line 628)


state 43
	ConstDecl11:  ConstDecl11.ConstSpec ; 
	Declaration:  CONST ( ConstDecl11.) 

	IDENTIFIER_LIST  shift 25
	)  shift 85
	.  error

	ConstSpec  goto 84

state 44
	ConstSpec:  IDENTIFIER_LIST =.ExpressionList 

	COMM  shift 112
	COMMCHAN  shift 55
	FLOAT_LIT  shift 90
	IDENTIFIER_BUILT_IN  shift 105
	IDENTIFIER_OPERAND  shift 101
	IDENTIFIER_TYPE  shift 57
	IMAGINARY_LIT  shift 91
	INT_LIT  shift 89
	RUNE_LIT  shift 92
	STRING_LIT  shift 93
	CHAN  shift 54
	FUNC  shift 100
	INTERFACE  shift 51
	MAP  shift 60
	STRUCT  shift 59
	[  shift 96
	(  shift 103
	+  shift 106
	-  shift 107
	^  shift 109
	*  shift 110
	&  shift 111
	!  shift 108
	.  error

	ArrayType  goto 95
	Expression  goto 87
	ExpressionList  goto 86
	MapType  goto 98
	ReceiverType  goto 102
	SliceType  goto 97
	StructType  goto 94
	Type  goto 104
	TypeName  goto 99
	UnaryExpr  goto 88

state 45
	ConstSpec:  IDENTIFIER_LIST Type.= ExpressionList 

	=  shift 113
	.  error


state 46
	Type:  TypeName.    (168)

	.  reduce 168 (src line 955)


state 47
	Type:  ArrayType.    (169)

	.  reduce 169 (src line 960)


state 48
	Type:  StructType.    (170)

	.  reduce 170 (src line 964)


state 49
	Type:  *.Type 

	COMMCHAN  shift 55
	IDENTIFIER_TYPE  shift 57
	CHAN  shift 54
	FUNC  shift 50
	INTERFACE  shift 51
	MAP  shift 60
	STRUCT  shift 59
	[  shift 58
	(  shift 56
	*  shift 49
	.  error

	ArrayType  goto 47
	MapType  goto 53
	SliceType  goto 52
	StructType  goto 48
	Type  goto 114
	TypeName  goto 46

state 50
	Type:  FUNC.Signature 

	(  shift 39
	.  error

	Parameters  goto 38
	Signature  goto 115

state 51
	Type:  INTERFACE.{ InterfaceType1 } 

	{  shift 116
	.  error


state 52
	Type:  SliceType.    (174)

	.  reduce 174 (src line 980)


state 53
	Type:  MapType.    (175)

	.  reduce 175 (src line 984)


state 54
	Type:  CHAN.CHANCOMM ElementType 

	CHANCOMM  shift 117
	.  error


state 55
	Type:  COMMCHAN.ElementType 

	COMMCHAN  shift 55
	IDENTIFIER_TYPE  shift 57
	CHAN  shift 54
	FUNC  shift 50
	INTERFACE  shift 51
	MAP  shift 60
	STRUCT  shift 59
	[  shift 58
	(  shift 56
	*  shift 49
	.  error

	ArrayType  goto 47
	ElementType  goto 118
	MapType  goto 53
	SliceType  goto 52
	StructType  goto 48
	Type  goto 119
	TypeName  goto 46

state 56
	Type:  (.Type ) 

	COMMCHAN  shift 55
	IDENTIFIER_TYPE  shift 57
	CHAN  shift 54
	FUNC  shift 50
	INTERFACE  shift 51
	MAP  shift 60
	STRUCT  shift 59
	[  shift 58
	(  shift 56
	*  shift 49
	.  error

	ArrayType  goto 47
	MapType  goto 53
	SliceType  goto 52
	StructType  goto 48
	Type  goto 120
	TypeName  goto 46

state 57
	TypeName:  IDENTIFIER_TYPE.    (183)

	.  reduce 183 (src line 1021)


state 58
	ArrayType:  [.Expression ] ElementType 
	SliceType:  [.] ElementType 

	COMM  shift 112
	COMMCHAN  shift 55
	FLOAT_LIT  shift 90
	IDENTIFIER_BUILT_IN  shift 105
	IDENTIFIER_OPERAND  shift 101
	IDENTIFIER_TYPE  shift 57
	IMAGINARY_LIT  shift 91
	INT_LIT  shift 89
	RUNE_LIT  shift 92
	STRING_LIT  shift 93
	CHAN  shift 54
	FUNC  shift 100
	INTERFACE  shift 51
	MAP  shift 60
	STRUCT  shift 59
	[  shift 96
	]  shift 122
	(  shift 103
	+  shift 106
	-  shift 107
	^  shift 109
	*  shift 110
	&  shift 111
	!  shift 108
	.  error

	ArrayType  goto 95
	Expression  goto 121
	MapType  goto 98
	ReceiverType  goto 102
	SliceType  goto 97
	StructType  goto 94
	Type  goto 104
	TypeName  goto 99
	UnaryExpr  goto 88

state 59
	StructType:  STRUCT.{ StructType1 } 

	{  shift 123
	.  error


state 60
	MapType:  MAP.[ Type ] ElementType 

	[  shift 124
	.  error


state 61
	Declaration:  TYPE ( TypeDecl11.) 
	TypeDecl11:  TypeDecl11.TypeSpec ; 

	NAME  shift 28
	)  shift 125
	.  error

	TypeSpec  goto 126

state 62
	TypeSpec:  NAME Type.    (184)

	.  reduce 184 (src line 1027)


state 63
	Declaration:  VAR ( VarDecl11.) 
	VarDecl11:  VarDecl11.VarSpec ; 

	IDENTIFIER_LIST  shift 31
	)  shift 127
	.  error

	VarSpec  goto 128

state 64
	VarSpec:  IDENTIFIER_LIST Type.    (271)
	VarSpec:  IDENTIFIER_LIST Type.= ExpressionList 

	=  shift 129
	.  reduce 271 (src line 1387)


state 65
	VarSpec:  IDENTIFIER_LIST =.ExpressionList 

	COMM  shift 112
	COMMCHAN  shift 55
	FLOAT_LIT  shift 90
	IDENTIFIER_BUILT_IN  shift 105
	IDENTIFIER_OPERAND  shift 101
	IDENTIFIER_TYPE  shift 57
	IMAGINARY_LIT  shift 91
	INT_LIT  shift 89
	RUNE_LIT  shift 92
	STRING_LIT  shift 93
	CHAN  shift 54
	FUNC  shift 100
	INTERFACE  shift 51
	MAP  shift 60
	STRUCT  shift 59
	[  shift 96
	(  shift 103
	+  shift 106
	-  shift 107
	^  shift 109
	*  shift 110
	&  shift 111
	!  shift 108
	.  error

	ArrayType  goto 95
	Expression  goto 87
	ExpressionList  goto 130
	MapType  goto 98
	ReceiverType  goto 102
	SliceType  goto 97
	StructType  goto 94
	Type  goto 104
	TypeName  goto 99
	UnaryExpr  goto 88

state 66
	ImportDecl11:  ImportDecl11 ImportSpec.; 

	;  shift 131
	.  error


state 67
	SourceFile1:  SourceFile1 IMPORT ( ImportDecl11 ).; 

	;  shift 132
	.  error


state 68
	SourceFile2:  SourceFile2 FUNC NAME Function ;.    (126)

	.  reduce 126 (src line 774)


state 69
	Function:  Signature Block.    (54)

	.  reduce 54 (src line 433)


state 70
	SourceFile2:  SourceFile2 FUNC NAME Signature ;.    (127)

	.  reduce 127 (src line 778)


state 71
	Block:  {.StatementList } 
	StatementList1: .    (162)

	.  reduce 162 (src line 925)

	StatementList  goto 133
	StatementList1  goto 134

state 72
	Signature:  Parameters Parameters.    (108)

	.  reduce 108 (src line 690)


state 73
	Signature:  Parameters Type.    (109)

	.  reduce 109 (src line 694)


state 74
	Parameters:  (.) 
	Parameters:  (.ParameterDecl ParameterList1 ) 
	Parameters:  (.ParameterDecl ParameterList1 , ) 
	Type:  (.Type ) 

	COMMCHAN  shift 55
	DDD  shift 78
	IDENTIFIER_LIST  shift 79
	IDENTIFIER_TYPE  shift 57
	CHAN  shift 54
	FUNC  shift 50
	INTERFACE  shift 51
	MAP  shift 60
	STRUCT  shift 59
	[  shift 58
	(  shift 56
	)  shift 75
	*  shift 49
	.  error

	ArrayType  goto 47
	MapType  goto 53
	ParameterDecl  goto 76
	SliceType  goto 52
	StructType  goto 48
	Type  goto 135
	TypeName  goto 46

state 75
	Parameters:  ( ).    (80)

	.  reduce 80 (src line 561)


state 76
	Parameters:  ( ParameterDecl.ParameterList1 ) 
	Parameters:  ( ParameterDecl.ParameterList1 , ) 
	ParameterList1: .    (78)

	.  reduce 78 (src line 551)

	ParameterList1  goto 136

state 77
	ParameterDecl:  Type.    (74)

	.  reduce 74 (src line 533)


state 78
	ParameterDecl:  DDD.Type 

	COMMCHAN  shift 55
	IDENTIFIER_TYPE  shift 57
	CHAN  shift 54
	FUNC  shift 50
	INTERFACE  shift 51
	MAP  shift 60
	STRUCT  shift 59
	[  shift 58
	(  shift 56
	*  shift 49
	.  error

	ArrayType  goto 47
	MapType  goto 53
	SliceType  goto 52
	StructType  goto 48
	Type  goto 137
	TypeName  goto 46

state 79
	ParameterDecl:  IDENTIFIER_LIST.Type 
	ParameterDecl:  IDENTIFIER_LIST.DDD Type 

	COMMCHAN  shift 55
	DDD  shift 139
	IDENTIFIER_TYPE  shift 57
	CHAN  shift 54
	FUNC  shift 50
	INTERFACE  shift 51
	MAP  shift 60
	STRUCT  shift 59
	[  shift 58
	(  shift 56
	*  shift 49
	.  error

	ArrayType  goto 47
	MapType  goto 53
	SliceType  goto 52
	StructType  goto 48
	Type  goto 138
	TypeName  goto 46

state 80
	SourceFile2:  SourceFile2 FUNC Receiver NAME Function.; 

	;  shift 140
	.  error


state 81
	Function:  Signature.Block 
	SourceFile2:  SourceFile2 FUNC Receiver NAME Signature.; 

	{  shift 71
	;  shift 141
	.  error

	Block  goto 69

state 82
	Receiver:  ( Receiver1 IDENTIFIER_TYPE.) 

	)  shift 142
	.  error


state 83
	Receiver:  ( Receiver1 *.IDENTIFIER_TYPE ) 

	IDENTIFIER_TYPE  shift 143
	.  error


state 84
	ConstDecl11:  ConstDecl11 ConstSpec.; 

	;  shift 144
	.  error


state 85
	Declaration:  CONST ( ConstDecl11 ).    (12)

	.  reduce 12 (src line 246)


state 86
	ConstSpec:  IDENTIFIER_LIST = ExpressionList.    (9)

	.  reduce 9 (src line 232)


state 87
	Expression:  Expression.OROR UnaryExpr 
	Expression:  Expression.ANDAND UnaryExpr 
	Expression:  Expression.EQ UnaryExpr 
	Expression:  Expression.NE UnaryExpr 
	Expression:  Expression.< UnaryExpr 
	Expression:  Expression.LE UnaryExpr 
	Expression:  Expression.> UnaryExpr 
	Expression:  Expression.GE UnaryExpr 
	Expression:  Expression.+ UnaryExpr 
	Expression:  Expression.- UnaryExpr 
	Expression:  Expression.| UnaryExpr 
	Expression:  Expression.^ UnaryExpr 
	Expression:  Expression.* UnaryExpr 
	Expression:  Expression./ UnaryExpr 
	Expression:  Expression.% UnaryExpr 
	Expression:  Expression.LSH UnaryExpr 
	Expression:  Expression.RSH UnaryExpr 
	Expression:  Expression.& UnaryExpr 
	Expression:  Expression.ANDNOT UnaryExpr 
	ExpressionList:  Expression.ExpressionList1 
	ExpressionList1: .    (47)

	ANDAND  shift 146
	ANDNOT  shift 163
	EQ  shift 147
	GE  shift 152
	LE  shift 150
	LSH  shift 160
	NE  shift 148
	OROR  shift 145
	RSH  shift 161
	<  shift 149
	>  shift 151
	+  shift 153
	-  shift 154
	|  shift 155
	^  shift 156
	*  shift 157
	/  shift 158
	%  shift 159
	&  shift 162
	.  reduce 47 (src line 399)

	ExpressionList1  goto 164

state 88
	Expression:  UnaryExpr.    (26)

	.  reduce 26 (src line 311)


state 89
	UnaryExpr:  INT_LIT.PrimaryExpr2 
	PrimaryExpr2: .    (83)

	.  reduce 83 (src line 575)

	PrimaryExpr2  goto 165

state 90
	UnaryExpr:  FLOAT_LIT.PrimaryExpr2 
	PrimaryExpr2: .    (83)

	.  reduce 83 (src line 575)

	PrimaryExpr2  goto 166

state 91
	UnaryExpr:  IMAGINARY_LIT.PrimaryExpr2 
	PrimaryExpr2: .    (83)

	.  reduce 83 (src line 575)

	PrimaryExpr2  goto 167

state 92
	UnaryExpr:  RUNE_LIT.PrimaryExpr2 
	PrimaryExpr2: .    (83)

	.  reduce 83 (src line 575)

	PrimaryExpr2  goto 168

state 93
	UnaryExpr:  STRING_LIT.PrimaryExpr2 
	PrimaryExpr2: .    (83)

	.  reduce 83 (src line 575)

	PrimaryExpr2  goto 169

state 94
	Type:  StructType.    (170)
	UnaryExpr:  StructType.LiteralValue PrimaryExpr2 

	{  shift 171
	.  reduce 170 (src line 964)

	LiteralValue  goto 170

state 95
	Type:  ArrayType.    (169)
	UnaryExpr:  ArrayType.LiteralValue PrimaryExpr2 

	{  shift 171
	.  reduce 169 (src line 960)

	LiteralValue  goto 172

state 96
	ArrayType:  [.Expression ] ElementType 
	SliceType:  [.] ElementType 
	UnaryExpr:  [.DDD ] ElementType LiteralValue PrimaryExpr2 

	COMM  shift 112
	COMMCHAN  shift 55
	DDD  shift 173
	FLOAT_LIT  shift 90
	IDENTIFIER_BUILT_IN  shift 105
	IDENTIFIER_OPERAND  shift 101
	IDENTIFIER_TYPE  shift 57
	IMAGINARY_LIT  shift 91
	INT_LIT  shift 89
	RUNE_LIT  shift 92
	STRING_LIT  shift 93
	CHAN  shift 54
	FUNC  shift 100
	INTERFACE  shift 51
	MAP  shift 60
	STRUCT  shift 59
	[  shift 96
	]  shift 122
	(  shift 103
	+  shift 106
	-  shift 107
	^  shift 109
	*  shift 110
	&  shift 111
	!  shift 108
	.  error

	ArrayType  goto 95
	Expression  goto 121
	MapType  goto 98
	ReceiverType  goto 102
	SliceType  goto 97
	StructType  goto 94
	Type  goto 104
	TypeName  goto 99
	UnaryExpr  goto 88

state 97
	Type:  SliceType.    (174)
	UnaryExpr:  SliceType.LiteralValue PrimaryExpr2 

	{  shift 171
	.  reduce 174 (src line 980)

	LiteralValue  goto 174

state 98
	Type:  MapType.    (175)
	UnaryExpr:  MapType.LiteralValue PrimaryExpr2 

	{  shift 171
	.  reduce 175 (src line 984)

	LiteralValue  goto 175

 99: reduce/reduce conflict  (red'ns 96 and 168) on )
state 99
	ReceiverType:  TypeName.    (96)
	Type:  TypeName.    (168)
	UnaryExpr:  TypeName.LiteralValue PrimaryExpr2 

	{  shift 171
	)  reduce 96 (src line 633)
	.  reduce 96 (src line 633)
	.  reduce 168 (src line 955)

	LiteralValue  goto 176

state 100
	Type:  FUNC.Signature 
	UnaryExpr:  FUNC.Function PrimaryExpr2 

	(  shift 39
	.  error

	Function  goto 178
	Parameters  goto 38
	Signature  goto 177

state 101
	UnaryExpr:  IDENTIFIER_OPERAND.PrimaryExpr2 
	PrimaryExpr2: .    (83)

	.  reduce 83 (src line 575)

	PrimaryExpr2  goto 179

state 102
	UnaryExpr:  ReceiverType.. MethodName PrimaryExpr2 

	.  shift 180
	.  error


state 103
	ReceiverType:  (.* TypeName ) 
	ReceiverType:  (.ReceiverType ) 
	Type:  (.Type ) 
	UnaryExpr:  (.Expression ) PrimaryExpr2 

	COMM  shift 112
	COMMCHAN  shift 55
	FLOAT_LIT  shift 90
	IDENTIFIER_BUILT_IN  shift 105
	IDENTIFIER_OPERAND  shift 101
	IDENTIFIER_TYPE  shift 57
	IMAGINARY_LIT  shift 91
	INT_LIT  shift 89
	RUNE_LIT  shift 92
	STRING_LIT  shift 93
	CHAN  shift 54
	FUNC  shift 100
	INTERFACE  shift 51
	MAP  shift 60
	STRUCT  shift 59
	[  shift 96
	(  shift 103
	+  shift 106
	-  shift 107
	^  shift 109
	*  shift 181
	&  shift 111
	!  shift 108
	.  error

	ArrayType  goto 95
	Expression  goto 184
	MapType  goto 98
	ReceiverType  goto 182
	SliceType  goto 97
	StructType  goto 94
	Type  goto 183
	TypeName  goto 99
	UnaryExpr  goto 88

state 104
	UnaryExpr:  Type.( Expression ) PrimaryExpr2 
	UnaryExpr:  Type.( Expression , ) PrimaryExpr2 

	(  shift 185
	.  error


state 105
	UnaryExpr:  IDENTIFIER_BUILT_IN.( ) PrimaryExpr2 
	UnaryExpr:  IDENTIFIER_BUILT_IN.( Type ) PrimaryExpr2 
	UnaryExpr:  IDENTIFIER_BUILT_IN.( Type , ArgumentList ) PrimaryExpr2 
	UnaryExpr:  IDENTIFIER_BUILT_IN.( ArgumentList ) PrimaryExpr2 
	UnaryExpr:  IDENTIFIER_BUILT_IN.( Type , ) PrimaryExpr2 
	UnaryExpr:  IDENTIFIER_BUILT_IN.( Type , ArgumentList , ) PrimaryExpr2 
	UnaryExpr:  IDENTIFIER_BUILT_IN.( ArgumentList , ) PrimaryExpr2 

	(  shift 186
	.  error


state 106
	UnaryExpr:  +.UnaryExpr 

	COMM  shift 112
	COMMCHAN  shift 55
	FLOAT_LIT  shift 90
	IDENTIFIER_BUILT_IN  shift 105
	IDENTIFIER_OPERAND  shift 101
	IDENTIFIER_TYPE  shift 57
	IMAGINARY_LIT  shift 91
	INT_LIT  shift 89
	RUNE_LIT  shift 92
	STRING_LIT  shift 93
	CHAN  shift 54
	FUNC  shift 100
	INTERFACE  shift 51
	MAP  shift 60
	STRUCT  shift 59
	[  shift 96
	(  shift 103
	+  shift 106
	-  shift 107
	^  shift 109
	*  shift 110
	&  shift 111
	!  shift 108
	.  error

	ArrayType  goto 95
	MapType  goto 98
	ReceiverType  goto 102
	SliceType  goto 97
	StructType  goto 94
	Type  goto 104
	TypeName  goto 99
	UnaryExpr  goto 187

state 107
	UnaryExpr:  -.UnaryExpr 

	COMM  shift 112
	COMMCHAN  shift 55
	FLOAT_LIT  shift 90
	IDENTIFIER_BUILT_IN  shift 105
	IDENTIFIER_OPERAND  shift 101
	IDENTIFIER_TYPE  shift 57
	IMAGINARY_LIT  shift 91
	INT_LIT  shift 89
	RUNE_LIT  shift 92
	STRING_LIT  shift 93
	CHAN  shift 54
	FUNC  shift 100
	INTERFACE  shift 51
	MAP  shift 60
	STRUCT  shift 59
	[  shift 96
	(  shift 103
	+  shift 106
	-  shift 107
	^  shift 109
	*  shift 110
	&  shift 111
	!  shift 108
	.  error

	ArrayType  goto 95
	MapType  goto 98
	ReceiverType  goto 102
	SliceType  goto 97
	StructType  goto 94
	Type  goto 104
	TypeName  goto 99
	UnaryExpr  goto 188

state 108
	UnaryExpr:  !.UnaryExpr 

	COMM  shift 112
	COMMCHAN  shift 55
	FLOAT_LIT  shift 90
	IDENTIFIER_BUILT_IN  shift 105
	IDENTIFIER_OPERAND  shift 101
	IDENTIFIER_TYPE  shift 57
	IMAGINARY_LIT  shift 91
	INT_LIT  shift 89
	RUNE_LIT  shift 92
	STRING_LIT  shift 93
	CHAN  shift 54
	FUNC  shift 100
	INTERFACE  shift 51
	MAP  shift 60
	STRUCT  shift 59
	[  shift 96
	(  shift 103
	+  shift 106
	-  shift 107
	^  shift 109
	*  shift 110
	&  shift 111
	!  shift 108
	.  error

	ArrayType  goto 95
	MapType  goto 98
	ReceiverType  goto 102
	SliceType  goto 97
	StructType  goto 94
	Type  goto 104
	TypeName  goto 99
	UnaryExpr  goto 189

state 109
	UnaryExpr:  ^.UnaryExpr 

	COMM  shift 112
	COMMCHAN  shift 55
	FLOAT_LIT  shift 90
	IDENTIFIER_BUILT_IN  shift 105
	IDENTIFIER_OPERAND  shift 101
	IDENTIFIER_TYPE  shift 57
	IMAGINARY_LIT  shift 91
	INT_LIT  shift 89
	RUNE_LIT  shift 92
	STRING_LIT  shift 93
	CHAN  shift 54
	FUNC  shift 100
	INTERFACE  shift 51
	MAP  shift 60
	STRUCT  shift 59
	[  shift 96
	(  shift 103
	+  shift 106
	-  shift 107
	^  shift 109
	*  shift 110
	&  shift 111
	!  shift 108
	.  error

	ArrayType  goto 95
	MapType  goto 98
	ReceiverType  goto 102
	SliceType  goto 97
	StructType  goto 94
	Type  goto 104
	TypeName  goto 99
	UnaryExpr  goto 190

state 110
	Type:  *.Type 
	UnaryExpr:  *.UnaryExpr 

	COMM  shift 112
	COMMCHAN  shift 55
	FLOAT_LIT  shift 90
	IDENTIFIER_BUILT_IN  shift 105
	IDENTIFIER_OPERAND  shift 101
	IDENTIFIER_TYPE  shift 57
	IMAGINARY_LIT  shift 91
	INT_LIT  shift 89
	RUNE_LIT  shift 92
	STRING_LIT  shift 93
	CHAN  shift 54
	FUNC  shift 100
	INTERFACE  shift 51
	MAP  shift 60
	STRUCT  shift 59
	[  shift 96
	(  shift 103
	+  shift 106
	-  shift 107
	^  shift 109
	*  shift 110
	&  shift 111
	!  shift 108
	.  error

	ArrayType  goto 95
	MapType  goto 98
	ReceiverType  goto 102
	SliceType  goto 97
	StructType  goto 94
	Type  goto 191
	TypeName  goto 99
	UnaryExpr  goto 192

state 111
	UnaryExpr:  &.UnaryExpr 

	COMM  shift 112
	COMMCHAN  shift 55
	FLOAT_LIT  shift 90
	IDENTIFIER_BUILT_IN  shift 105
	IDENTIFIER_OPERAND  shift 101
	IDENTIFIER_TYPE  shift 57
	IMAGINARY_LIT  shift 91
	INT_LIT  shift 89
	RUNE_LIT  shift 92
	STRING_LIT  shift 93
	CHAN  shift 54
	FUNC  shift 100
	INTERFACE  shift 51
	MAP  shift 60
	STRUCT  shift 59
	[  shift 96
	(  shift 103
	+  shift 106
	-  shift 107
	^  shift 109
	*  shift 110
	&  shift 111
	!  shift 108
	.  error
